--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -8,7 +8,7 @@ on:
       - develop
 jobs:
   android-e2e-build:
-    if: github.event.pull_request.draft == false
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: blacksmith-8vcpu-ubuntu-2404
     timeout-minutes: 30
     concurrency:
@@ -88,7 +88,6 @@ jobs:
         id: rnef-remote-build-android
         uses: callstackincubator/android@v2
         env:
-          # Can be used to help debug test failures. This will cause the apk to be
           # This is a debug keystore for now.
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
           KEYSTORE_FILE: ${{ secrets.KEYSTORE_FILE }}
@@ -115,7 +114,7 @@ jobs:
       fail-fast: false
       matrix:
         shard-index: [1, 2, 3, 4]
-    if: github.event.pull_request.draft == false
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: app-e2e-runner
     needs: android-e2e-build
     timeout-minutes: 30
