--- a/.github/workflows/macstadium-builds.yml
+++ b/.github/workflows/macstadium-builds.yml
@@ -54,6 +54,10 @@ jobs:
         run: |
           yarn install && yarn setup
 
+      - name: Version debug
+        run: |
+          npx react-native info
+
       - name: Install pods
         run: |
           rm -rf /Users/administrator/.cocoapods/repos/cocoapods/.git/index.lock
