--- a/e2e/transactions/SendTransaction.yaml
+++ b/e2e/transactions/SendTransaction.yaml
@@ -97,7 +97,7 @@ tags:
                 childOf:
                   id: toast-expanded-.*
             - assertVisible:
-                text: '- 0.01 ETH'
+                text: '0.01 ETH'
                 childOf:
                   id: toast-expanded-.*
             - tapOn:
