--- a/.github/workflows/ios-e2e.yml
+++ b/.github/workflows/ios-e2e.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Set Xcode version
+        run: sudo xcode-select --switch /Applications/Xcode_16.4.app
+
       - name: Setup env key
         uses: ./.github/actions/ssh/
         with:
