--- a/ios/Rainbow/Info.plist
+++ b/ios/Rainbow/Info.plist
@@ -140,6 +140,15 @@
 				<key>UIPrerenderedIcon</key>
 				<false/>
 			</dict>
+			<key>baggy</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>baggy</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
 		</dict>
 		<key>CFBundlePrimaryIcon</key>
 		<dict>
