--- a/package.json
+++ b/package.json
@@ -323,6 +323,10 @@
     "@react-native/babel-preset": "0.79.0",
     "@react-native/metro-config": "0.79.0",
     "@react-native/typescript-config": "0.79.0",
+    "@rnef/cli": "0.8.11",
+    "@rnef/platform-android": "0.8.11",
+    "@rnef/platform-ios": "0.8.11",
+    "@rnef/plugin-metro": "0.8.11",
     "@testing-library/react-native": "11.2.0",
     "@types/chroma-js": "2.1.3",
     "@types/d3-scale": "4.0.2",
