--- a/.github/workflows/ios-e2e.yml
+++ b/.github/workflows/ios-e2e.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   # iOS build job
   build:
-    name: Build
+    name: Test Build
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: macos-15-xlarge
     concurrency:
