--- a/e2e/flows/transactions/SendNft.yaml
+++ b/e2e/flows/transactions/SendNft.yaml
@@ -85,12 +85,23 @@ tags:
       - longPressOn: 'Hold to Send'
       - runFlow: ../../utils/MaybeSetupPin.yaml
 
-      # Test transaction was done
-      - assertVisible: 'Pending'
-      - assertVisible: 'Sending.*'
-
-      - tapOn: Sending.*
-
+      # Check toast data
+      - assertVisible:
+          text: 'Sending'
+          childOf:
+            id: toast-.*
+      - assertVisible:
+          text: 'Rainbow Pooly 104'
+          childOf:
+            id: toast-.*
+      # Open toast
+      - tapOn:
+          id: toast-.*
+      - assertVisible: 'Sending'
+      - assertVisible: 'Rainbow Pooly'
+      - tapOn:
+          id: toast-expanded-.*
+      # Check transaction sheet
       - assertVisible: 'Sending'
       - assertVisible: '.*Tx Hash.*'
       - assertVisible: 'View on Etherscan'
