--- a/e2e/flows/transactions/SendTransaction.yaml
+++ b/e2e/flows/transactions/SendTransaction.yaml
@@ -51,7 +51,8 @@ tags:
     commands:
       - tapOn:
           id: send-asset
-
+- tapOn:
+    id: selected-asset-field-input
 - inputText: '0.01'
 
 - retry:
@@ -62,7 +63,7 @@ tags:
 
 # Test enter amount
 - assertVisible: 'Sending'
-- assertVisible: '$0.01'
+- assertVisible: '0.01 ETH'
 - assertVisible: 'rainbowwallet.eth'
 
 # iOS is 'Hold to Send' button is stuck on 'Loading...'
@@ -74,12 +75,30 @@ tags:
       - longPressOn: 'Hold to Send'
       - runFlow: ../../utils/MaybeSetupPin.yaml
 
-      # Test transaction was done
-      - assertVisible: 'Pending'
-      - assertVisible: 'Sending*.'
-
-      - tapOn: Sending*.
-
+      # Check toast data
+      - assertVisible:
+          text: 'Sending'
+          childOf:
+            id: toast-.*
+      - assertVisible:
+          text: '0.01 ETH'
+          childOf:
+            id: toast-.*
+      # Open toast
+      - tapOn:
+          id: toast-.*
+      # Check expended toast data
+      - assertVisible:
+          text: 'Sending'
+          childOf:
+            id: toast-expanded-.*
+      - assertVisible:
+          text: '0.01 ETH'
+          childOf:
+            id: toast-expanded-.*
+      - tapOn:
+          id: toast-expanded-.*
+      # Check transaction sheet
       - assertVisible: 'Sending'
       - assertVisible: '.*Tx Hash*.'
       - assertVisible: 'View on Etherscan'
