--- a/e2e/onboarding/CreateWallet.yaml
+++ b/e2e/onboarding/CreateWallet.yaml
@@ -22,5 +22,7 @@ tags:
           id: wallet-screen
       - assertVisible:
           id: copy-address-button
-      - assertVisible:
-          id: eth-card
+      - extendedWaitUntil:
+          visible:
+            text: .*\$[\d,]+\.\d{2}.*
+          timeout: 30000
