--- a/package.json
+++ b/package.json
@@ -323,10 +323,9 @@
     "@react-native/babel-preset": "0.79.0",
     "@react-native/metro-config": "0.79.0",
     "@react-native/typescript-config": "0.79.0",
-    "@rnef/cli": "0.8.11",
-    "@rnef/platform-android": "0.8.11",
-    "@rnef/platform-ios": "0.8.11",
-    "@rnef/plugin-metro": "0.8.11",
+    "@rock-js/platform-android": "0.9.2",
+    "@rock-js/platform-ios": "0.9.2",
+    "@rock-js/plugin-metro": "0.9.2",
     "@testing-library/react-native": "11.2.0",
     "@types/chroma-js": "2.1.3",
     "@types/d3-scale": "4.0.2",
@@ -368,6 +367,7 @@
     "react-test-renderer": "18.2.0",
     "resolve": "1.22.8",
     "rn-nodeify": "10.2.0",
+    "rock": "0.9.2",
     "schedule": "0.5.0",
     "ts-loader": "9.5.1",
     "ts-migrate": "0.1.26",
