--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,3 +5,9 @@ enableScripts: false
 checksumBehavior: reset
 defaultSemverRangePrefix: ''
 enableInlineBuilds: true
+
+npmScopes:
+  rainbow-me:
+    npmRegistryServer: 'https://registry.npmjs.org'
+    npmAlwaysAuth: true
+    npmAuthToken: '${NPM_TOKEN}'
