--- a/package.json
+++ b/package.json
@@ -386,7 +386,8 @@
   "resolutions": {
     "@types/react": "19.1.3",
     "cross-fetch": "3.1.5",
-    "react": "19.0.0"
+    "react": "19.0.0",
+    "@tanstack/query-core": "4.36.1"
   },
   "react-native": {
     "@tanstack/query-async-storage-persister": "@tanstack/query-async-storage-persister/build/esm/index",
