--- a/e2e/flows/transactions/SendTransaction.yaml
+++ b/e2e/flows/transactions/SendTransaction.yaml
@@ -87,15 +87,23 @@ tags:
       # Open toast
       - tapOn:
           id: toast-.*
-      # Check expended toast data
-      - assertVisible:
-          text: 'Sending'
-          childOf:
-            id: toast-expanded-.*
-      - assertVisible:
-          text: '0.01 ETH'
-          childOf:
-            id: toast-expanded-.*
+      - waitForAnimationToEnd:
+          timeout: 2000
+      # Check expanded toast data with retry
+      - retry:
+          maxRetries: 3
+          commands:
+            - assertVisible:
+                text: 'Sending'
+                childOf:
+                  id: toast-expanded-.*
+      - retry:
+          maxRetries: 3
+          commands:
+            - assertVisible:
+                text: '0.01 ETH'
+                childOf:
+                  id: toast-expanded-.*
       - tapOn:
           id: toast-expanded-.*
       # Check transaction sheet
