Fix issue with e2e (#6838)
* Fix issue with discover in e2e

* Fix toast issue

* Fix send

* Fix

* Fix

* Fix toast issue in test

--- a/e2e/flows/transactions/SendTransaction.yaml
+++ b/e2e/flows/transactions/SendTransaction.yaml
@@ -87,7 +87,9 @@ tags:
       # Open toast
       - tapOn:
           id: toast-.*
-      # Check expended toast data
+      - waitForAnimationToEnd:
+          timeout: 2000
+      # Check expanded toast data
       - assertVisible:
           text: 'Sending'
           childOf:
