--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-menu/menu": "1.2.3",
     "@react-native/metro-config": "0.74.83",
+    "@react-native/new-app-screen": "0.81.4",
     "@react-navigation/core": "6.4.16",
     "@react-navigation/material-top-tabs": "6.6.2",
     "@react-navigation/native": "6.1.17",
@@ -124,7 +125,7 @@
     "@reown/walletkit": "1.1.2",
     "@reservoir0x/reservoir-sdk": "2.3.0",
     "@rudderstack/rudder-sdk-react-native": "2.0.0",
-    "@sentry/react-native": "6.15.1",
+    "@sentry/react-native": "7.1.0",
     "@shopify/flash-list": "1.8.2",
     "@shopify/react-native-performance": "4.1.2",
     "@shopify/react-native-skia": "2.0.7",
@@ -208,11 +209,11 @@
     "qrcode": "1.4.4",
     "qs": "6.9.7",
     "querystring-es3": "0.2.1",
-    "react": "19.0.0",
+    "react": "19.1.0",
     "react-fast-compare": "3.2.2",
     "react-flatten-children": "1.1.2",
     "react-freeze": "1.0.4",
-    "react-native": "0.79.5",
+    "react-native": "0.81.4",
     "react-native-action-sheet": "2.2.0",
     "react-native-actionsheet": "2.4.2",
     "react-native-aes-crypto": "rainbow-me/react-native-aes#65c49f7e70266615b2999eaa7db654d3fe4f2e3b",
@@ -253,10 +254,10 @@
     "react-native-reanimated": "3.18.0",
     "react-native-redash": "16.3.0",
     "react-native-restart": "0.0.22",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "5.5.2",
     "react-native-safe-area-view": "rainbow-me/react-native-safe-area-view",
     "react-native-screen-corner-radius": "0.2.2",
-    "react-native-screens": "4.10.0",
+    "react-native-screens": "4.16.0",
     "react-native-section-list-get-item-layout": "2.2.3",
     "react-native-share": "8.2.1",
     "react-native-sound": "0.11.2",
@@ -317,12 +318,12 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@lavamoat/allow-scripts": "3.0.1",
-    "@react-native-community/cli": "18.0.0",
-    "@react-native-community/cli-platform-android": "18.0.0",
-    "@react-native-community/cli-platform-ios": "18.0.0",
-    "@react-native/babel-preset": "0.79.0",
-    "@react-native/metro-config": "0.79.0",
-    "@react-native/typescript-config": "0.79.0",
+    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli-platform-android": "20.0.0",
+    "@react-native-community/cli-platform-ios": "20.0.0",
+    "@react-native/babel-preset": "0.81.4",
+    "@react-native/metro-config": "0.81.4",
+    "@react-native/typescript-config": "0.81.4",
     "@rock-js/platform-android": "0.9.2",
     "@rock-js/platform-ios": "0.9.2",
     "@rock-js/plugin-metro": "0.9.2",
@@ -337,7 +338,7 @@
     "@types/prop-types": "15.7.14",
     "@types/qs": "6.9.7",
     "@types/react": "19.1.3",
-    "@types/react-test-renderer": "19.0.0",
+    "@types/react-test-renderer": "19.1.0",
     "@types/styled-components": "5.1.34",
     "@types/url-parse": "1.4.3",
     "ast-parser": "0.0.5",
@@ -363,27 +364,27 @@
     "metro-plugin-anisotropic-transform": "https://github.com/rainbow-me/metro-plugin-anisotropic-transform#593b1299f4fec3ddd3f8ad92d381e3d9ad171b82",
     "node-vibrant": "3.2.1-alpha.1",
     "prettier": "3.2.5",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "19.1.0",
     "resolve": "1.22.8",
     "rn-nodeify": "10.2.0",
     "rock": "0.9.2",
     "schedule": "0.5.0",
     "ts-loader": "9.5.1",
     "ts-migrate": "0.1.26",
-    "typescript": "5.5.4",
+    "typescript": "5.8.3",
     "typescript-coverage-report": "0.6.1",
     "webpack": "5.94.0",
     "webpack-cli": "5.1.4",
     "yaml-eslint-parser": "1.3.0"
   },
   "engines": {
-    "node": ">=18.0.0 <19.0.0"
+    "node": ">=20"
   },
   "packageManager": "yarn@4.2.2",
   "resolutions": {
     "@types/react": "19.1.3",
     "cross-fetch": "3.1.5",
-    "react": "19.0.0"
+    "react": "19.1.0"
   },
   "react-native": {
     "@tanstack/query-async-storage-persister": "@tanstack/query-async-storage-persister/build/esm/index",
@@ -412,6 +413,11 @@
     "timers": "timers-browserify",
     "tty": "tty-browserify",
     "vm": "vm-browserify",
+    "zustand": "zustand/index.js",
+    "zustand/context": "zustand/context.js",
+    "zustand/middleware": "zustand/middleware.js",
+    "zustand/traditional": "zustand/traditional.js",
+    "zustand/vanilla": "zustand/vanilla.js",
     "tls": false
   },
   "browser": {
