--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,5 +55,16 @@
     "resolveJsonModule": true
   },
   "globals": ["useTheme", "ios", "android", "web", "__DEV__", "IS_DEV"],
-  "exclude": ["ios", "src/browser", "android", "patches/reanimated", "node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": [
+    "ios",
+    "src/browser",
+    "android",
+    "patches/reanimated",
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js",
+    "**/Pods"
+  ]
 }
