--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,5 @@
-pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin")
+pluginManagement {
+  includeBuild("../node_modules/@react-native/gradle-plugin")
   def expoPluginsPath = new File(
     providers.exec {
       workingDir(rootDir)
@@ -7,6 +8,14 @@ pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin")
     "../android/expo-gradle-plugin"
   ).absolutePath
   includeBuild(expoPluginsPath)
+
+  resolutionStrategy {
+    eachPlugin {
+      if (requested.id.id.startsWith("org.jetbrains.kotlin")) {
+        useVersion("2.1.20")
+      }
+    }
+  }
 }
 plugins { id("com.facebook.react.settings")
 id("expo-autolinking-settings")
