--- a/.github/workflows/comments-watchdog.yml
+++ b/.github/workflows/comments-watchdog.yml
@@ -24,7 +24,7 @@ jobs:
           # Fetch the list of users in the organization
           ORG_MEMBERS=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
           "https://api.github.com/orgs/${{ github.repository_owner }}/members" | jq -r '.[].login')
-          
+
           # Save the allowlisted users in a file
           echo "$ORG_MEMBERS" > allowlisted_users.txt
 
@@ -35,7 +35,7 @@ jobs:
           COMMENT_ID=$(jq -r '.comment.id' < "$GITHUB_EVENT_PATH")
           COMMENT_BODY=$(jq -r '.comment.body' < "$GITHUB_EVENT_PATH")
           COMMENT_USER=$(jq -r '.comment.user.login' < "$GITHUB_EVENT_PATH")
-          
+
           # Check if the comment user is allowlisted
           if grep -q "$COMMENT_USER" allowlisted_users.txt; then
             echo "Comment by $COMMENT_USER is from an allowlisted user. No action taken."
@@ -48,7 +48,7 @@ jobs:
           # Check if the comment contains any spam patterns
           if echo "$COMMENT_BODY" | grep -iE "$SPAM_KEYWORDS"; then
             echo "Spam comment detected: $COMMENT_BODY"
-            
+
             # Delete the comment using the GitHub API
             curl -X DELETE \
               -H "Authorization: token $GITHUB_TOKEN" \
@@ -56,7 +56,7 @@ jobs:
               "https://api.github.com/repos/${{ github.repository }}/issues/comments/$COMMENT_ID" || \
               "https://api.github.com/repos/${{ github.repository }}/pulls/comments/$COMMENT_ID" || \
               "https://api.github.com/repos/${{ github.repository }}/discussions/comments/$COMMENT_ID"
-              
+
             echo "Spam comment deleted"
             # Log the deleted comment
             echo "Deleted comment from user $COMMENT_USER: $COMMENT_BODY" >> deleted_comments_log.txt
@@ -65,7 +65,7 @@ jobs:
           fi
 
       - name: Upload deleted comments log as artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: deleted-comments-log
           path: deleted_comments_log.txt
