--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -2,21 +2,20 @@ name: Mark stale issues and pull requests
 
 on:
   schedule:
-    - cron: '30 20 * * 1' # Runs every Monday at 20:30 UTC
+    - cron: "30 20 * * 1" # Runs every Monday at 20:30 UTC
 
 jobs:
   stale:
-
     runs-on: ubuntu-latest
     permissions:
       issues: write
 
     steps:
       - name: Mark stale issues
-        uses: actions/stale@v8
+        uses: actions/stale@1160a2240286f5da8ec72b1c0816ce2481aabf84
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          stale-issue-message: 'This issue has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs.'
-          stale-issue-label: 'stale'
-          days-before-stale: 30  
-          days-before-close: 7  
+          stale-issue-message: "This issue has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs."
+          stale-issue-label: "stale"
+          days-before-stale: 30
+          days-before-close: 7
