Update heap space

--- a/.github/workflows/ios-builds.yml
+++ b/.github/workflows/ios-builds.yml
@@ -9,6 +9,8 @@ jobs:
   build-simulator:
     name: Simulator
     runs-on: macos-15-xlarge
+    env:
+      NODE_OPTIONS: "--max-old-space-size=6144"
     timeout-minutes: 30
     if: github.event.pull_request.draft == false && github.event.pull_request.merged == false
     concurrency:
@@ -94,6 +96,8 @@ jobs:
   build-device:
     name: Device
     runs-on: macos-15-xlarge
+    env:
+      NODE_OPTIONS: "--max-old-space-size=6144"
     timeout-minutes: 30
     if: github.event.pull_request.draft == false && github.event.pull_request.merged == false
     concurrency:
