--- a/.github/workflows/ios-e2e.yml
+++ b/.github/workflows/ios-e2e.yml
@@ -7,6 +7,9 @@ on:
   push:
     branches:
       - develop
+env:
+  NODE_OPTIONS: "--max-old-space-size=6144"
+
 jobs:
   # iOS build job
   build:
