--- a/package.json
+++ b/package.json
@@ -216,7 +216,7 @@
     "react-native-action-sheet": "2.2.0",
     "react-native-actionsheet": "2.4.2",
     "react-native-aes-crypto": "rainbow-me/react-native-aes#65c49f7e70266615b2999eaa7db654d3fe4f2e3b",
-    "react-native-animateable-text": "0.16.0-beta.0",
+    "react-native-animateable-text": "0.16.0",
     "react-native-ble-plx": "3.2.1",
     "react-native-blur-view": "christianbaroni/react-native-blur-view#2548117e37750f2c08ef0ec8c7e1c38e1294c9a8",
     "react-native-bootsplash": "6.3.7",
