--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "@notifee/react-native": "7.8.2",
     "@rainbow-me/provider": "0.1.2",
     "@rainbow-me/react-native-animated-number": "0.0.2",
-    "@rainbow-me/swaps": "0.36.0",
+    "@rainbow-me/swaps": "0.37.0-beta.2",
     "@rainbow-me/token-launcher": "0.2.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-camera-roll/camera-roll": "7.10.0",
