--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -323,6 +323,19 @@
               <category android:name="android.intent.category.LAUNCHER" />
           </intent-filter>
       </activity-alias>
+      <activity-alias
+          android:name="me.rainbow.MainActivitychonks"
+          android:enabled="false"
+          android:icon="@mipmap/chonks"
+          android:roundIcon="@mipmap/chonks_round"
+          android:targetActivity=".MainActivity"
+          android:exported="true"
+          >
+          <intent-filter>
+              <action android:name="android.intent.action.MAIN" />
+              <category android:name="android.intent.category.LAUNCHER" />
+          </intent-filter>
+      </activity-alias>
 
       <!-- Branch init -->
       <meta-data android:name="io.branch.sdk.BranchKey" android:value="${BRANCH_KEY}" />
