Test fix for rainbow providers

--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -74,6 +74,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
+      - run: cd rainbow-scripts && git checkout @janic/fix-webview-providers
+
       - name: Install dependencies
         env:
           SSH_AUTH_SOCK: /tmp/ssh_agent_sandbox.sock
