--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "isolatedModules": true,
     "jsx": "react-native",
     "lib": ["esnext", "dom"],
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
     "target": "esnext",
@@ -15,37 +15,9 @@
     "paths": {
       "@/*": ["./src/*"],
       "@/swaps": ["./src/__swaps__"],
-      "@rainbow-me/assets": ["./src/assets"],
-      "@rainbow-me/config": ["./src/config"],
       "@rainbow-me/config/*": ["./src/config/*"],
-      "@rainbow-me/design-system": ["src/design-system"],
       "@rainbow-me/entities": ["src/entities"],
-      "@rainbow-me/handlers": ["./src/handlers"],
-      "@rainbow-me/handlers/*": ["./src/handlers/*"],
-      "@rainbow-me/helpers": ["./src/helpers"],
-      "@rainbow-me/helpers/*": ["./src/helpers/*"],
-      "@rainbow-me/hooks": ["src/hooks"],
-      "@rainbow-me/images": ["src/components/images"],
-      "@rainbow-me/model": ["src/model"],
-      "@rainbow-me/model/*": ["src/model/*"],
-      "@rainbow-me/navigation": ["src/navigation"],
-      "@rainbow-me/navigation/*": ["src/navigation/*"],
-      "@rainbow-me/parsers": ["src/parsers"],
-      "@rainbow-me/raps": ["src/raps"],
-      "@rainbow-me/react-query": ["./src/react-query"],
-      "@rainbow-me/react-query/*": ["./src/react-query/*"],
-      "@rainbow-me/redux": ["src/redux"],
-      "@rainbow-me/redux/*": ["src/redux/*"],
-      "@rainbow-me/references": ["src/references"],
       "@rainbow-me/routes": ["src/navigation/routesNames"],
-      "@rainbow-me/styles": ["src/styles"],
-      "@rainbow-me/styled-components": ["src/styled-thing"],
-      "@rainbow-me/theme": ["src/theme"],
-      "@rainbow-me/utilities": ["./src/helpers/utilities"],
-      "@rainbow-me/utils": ["src/utils"],
-      "@rainbow-me/utils/*": ["src/utils/*"],
-      "@rainbow-me/performance/utils": ["src/performance/utils"],
-      "@rainbow-me/analytics": ["src/analytics"],
       "ens-avatar": ["src/ens-avatar/src"],
       "logger": ["src/utils/logger"],
       "react-native-cool-modals": ["src/react-native-cool-modals"],
